<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp"
    android:background="#201C2C"
    tools:context=".controller.controller.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text_view"
        android:textColor="#EEB6CE"
        android:textSize="50sp"
        app:fontFamily="cursive" />


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="20dp"
        android:background="#43364D"
        android:fontFamily="casual"
        android:hint="@string/username"
        android:padding="18dp"

        android:textColor="#D5D373EE"
        android:textColorHighlight="#FFC7A8E9"
        android:textColorHint="#D5DA94E6"
        android:textColorLink="#FFC7A8E9"
        android:textCursorDrawable="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:background="#43364D"
        android:fontFamily="casual"
        android:hint="@string/password"
        android:padding="18dp"
        android:textColor="#D5D373EE"
        android:textColorHighlight="#FFC7A8E9"
        android:textColorHint="#D5DA94E6"
        android:textColorLink="#D5D373EE"
        android:textCursorDrawable="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#B11870"
        android:fontFamily="casual"
        android:includeFontPadding="false"
        android:text="@string/button_login"
        android:textColor="#EEB6CE"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/text_view_rgs"
        android:textColor="#EEB6CE"
        android:textColorHighlight="#DFBAF0"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="casual" />

    <TextView
        android:id="@+id/text_view_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:gravity="center"
        android:text="login as admin"
        android:textColor="#EEB6CE"
        android:textColorHighlight="#DFBAF0"
        android:textSize="17sp"
        android:textStyle="bold"
        app:fontFamily="casual" />



</LinearLayout>